--- a/projects/fitness-tracker.html
+++ b/projects/fitness-tracker.html
@@ -10,7 +10,7 @@
         body { font-family: 'Inter', sans-serif; max-width: 900px; margin: 0 auto; padding: 60px 40px; line-height: 1.7; background-color: #fcfaf0; color: #363633; }
         .back-link { font-size: 0.8rem; letter-spacing: 0.1em; text-transform: uppercase; color: #80756b; text-decoration: none; border-bottom: 1px solid #c2b5a6; padding-bottom: 2px; transition: all 0.3s; }
         .back-link:hover { color: #363633; border-color: #363633; }
-        .header { position: relative; margin: 40px 0 60px; padding-bottom: 32px; border-bottom: 1px solid #c2b5a6; }
+        .header { position: relative; margin: 40px 0 60px; }
         .header .watermark { font-family: 'DM Serif Display', serif; font-size: 6rem; color: #e3decc; position: absolute; top: -30px; left: -10px; z-index: 0; line-height: 1; pointer-events: none; user-select: none; }
         .header h1 { font-family: 'DM Serif Display', serif; font-size: 2.4rem; font-weight: 400; position: relative; z-index: 1; }
         .header .subtitle { font-size: 0.75rem; letter-spacing: 0.2em; text-transform: uppercase; color: #80756b; margin-top: 10px; position: relative; z-index: 1; }
