Remove em dash separators from section labels

--- a/projects/email-marketing.html
+++ b/projects/email-marketing.html
@@ -40,7 +40,7 @@
         <h1>Grotto Digital</h1>
     </div>
 
-    <div class="section-label">02. ——— Key Metrics</div>
+    <div class="section-label">02. Key Metrics</div>
     <div class="metrics">
         <div class="metric">
             <h3>Monthly Revenue</h3>
@@ -61,7 +61,7 @@
         <div class="progress-label" id="rev-label">Loading...</div>
     </div>
 
-    <div class="section-label">03. ——— Details</div>
+    <div class="section-label">03. Details</div>
     <div id="details">
         <div class="info-row"><span class="label">Revenue Goal</span><span class="value" id="d-goal">Loading...</span></div>
         <div class="info-row"><span class="label">Target Clients</span><span class="value" id="d-target">Loading...</span></div>
@@ -71,7 +71,7 @@
         <div class="info-row"><span class="label">Acquisition Channels</span><span class="value" id="d-channels">Loading...</span></div>
     </div>
 
-    <div class="section-label">04. ——— Recent Wins</div>
+    <div class="section-label">04. Recent Wins</div>
     <ul id="wins-list"><li>Loading...</li></ul>
 
     <script>
