--- a/projects/figma-klaviyo-plugin.html
+++ b/projects/figma-klaviyo-plugin.html
@@ -36,14 +36,14 @@
 
     <p class="desc" id="desc">Loading...</p>
 
-    <div class="section-label">02. ——— Status</div>
+    <div class="section-label">02. Status</div>
     <div id="details">
         <div class="info-row"><span class="label">Stage</span><span class="value" id="d-stage">Loading...</span></div>
         <div class="info-row"><span class="label">Monthly Revenue</span><span class="value" id="d-rev">Loading...</span></div>
         <div class="info-row"><span class="label">Biggest Blocker</span><span class="value" id="d-blocker">Loading...</span></div>
     </div>
 
-    <div class="section-label">03. ——— Next Steps</div>
+    <div class="section-label">03. Next Steps</div>
     <ul id="steps-list"><li>Loading...</li></ul>
 
     <script>
