--- a/projects/fitness-tracker.html
+++ b/projects/fitness-tracker.html
@@ -45,7 +45,7 @@
         <h1>Personal Fitness Tracker</h1>
     </div>
 
-    <div class="section-label">02. ——— Key Metrics</div>
+    <div class="section-label">02. Key Metrics</div>
     <div class="metrics">
         <div class="metric">
             <h3>Current Weight</h3>
@@ -66,10 +66,10 @@
 
     <div class="info-row"><span class="label">Next Meal Prep Day</span><span class="value" id="d-meal">Loading...</span></div>
 
-    <div class="section-label">03. ——— Gym Calendar</div>
+    <div class="section-label">03. Gym Calendar</div>
     <div id="calendar-container"></div>
 
-    <div class="section-label">04. ——— Weight History</div>
+    <div class="section-label">04. Weight History</div>
     <div class="weight-history" id="weight-history">Loading...</div>
 
     <script>
