--- a/projects/meeting-backgrounds.html
+++ b/projects/meeting-backgrounds.html
@@ -36,7 +36,7 @@
         <h1>MeetingBackgrounds.com</h1>
     </div>
 
-    <div class="section-label">02. ——— Key Metrics</div>
+    <div class="section-label">02. Key Metrics</div>
     <div class="metrics">
         <div class="metric">
             <h3>Stage</h3>
@@ -54,7 +54,7 @@
 
     <div class="info-row"><span class="label">Target Launch Date</span><span class="value" id="d-launch">Loading...</span></div>
 
-    <div class="section-label">03. ——— Launch Tasks</div>
+    <div class="section-label">03. Launch Tasks</div>
     <ul id="tasks-list"><li>Loading...</li></ul>
 
     <script>
