--- a/projects/relationships.html
+++ b/projects/relationships.html
@@ -37,7 +37,7 @@
         <h1>Relationships</h1>
     </div>
 
-    <div class="section-label">02. ——— Goals</div>
+    <div class="section-label">02. Goals</div>
     <div id="goals">
         <div class="info-row"><span class="label">Dating Goal</span><span class="value" id="g-dating">Loading...</span></div>
         <div class="info-row"><span class="label">Friend Hangouts / Week</span><span class="value" id="g-friends">Loading...</span></div>
@@ -45,7 +45,7 @@
         <div class="info-row"><span class="label">Family Check-In</span><span class="value" id="g-family">Loading...</span></div>
     </div>
 
-    <div class="section-label">03. ——— This Week</div>
+    <div class="section-label">03. This Week</div>
     <div class="metrics" id="weekly-metrics">
         <div class="metric">
             <h3>Friend Hangouts</h3>
