--- a/projects/template-package.html
+++ b/projects/template-package.html
@@ -39,7 +39,7 @@
         <h1 id="title">Grotto Template Package</h1>
     </div>
 
-    <div class="section-label">02. ——— Key Metrics</div>
+    <div class="section-label">02. Key Metrics</div>
     <div class="metrics">
         <div class="metric">
             <h3>Total Revenue</h3>
@@ -55,13 +55,13 @@
         </div>
     </div>
 
-    <div class="section-label">03. ——— Marketing Channels</div>
+    <div class="section-label">03. Marketing Channels</div>
     <div id="channels"></div>
 
-    <div class="section-label">04. ——— To-Do</div>
+    <div class="section-label">04. To-Do</div>
     <ul id="todo-list"><li>Loading...</li></ul>
 
-    <div class="section-label">05. ——— Biggest Blocker</div>
+    <div class="section-label">05. Biggest Blocker</div>
     <ul><li id="blocker-bottom">Loading...</li></ul>
 
     <script>
