--- a/projects/weekly-review.html
+++ b/projects/weekly-review.html
@@ -40,7 +40,7 @@
         <h1>Weekly Review</h1>
     </div>
 
-    <div class="section-label">02. ——— Revenue Breakdown</div>
+    <div class="section-label">02. Revenue Breakdown</div>
     <div class="metrics" id="rev-metrics">
         <div class="metric">
             <h3>Grotto Digital</h3>
@@ -65,7 +65,7 @@
         <span class="value" id="r-total">Loading...</span>
     </div>
 
-    <div class="section-label">03. ——— Top Focuses</div>
+    <div class="section-label">03. Top Focuses</div>
     <div class="focuses-grid" id="focuses-grid">
         <div class="focus-card">
             <h2>Grotto Digital</h2>
@@ -85,7 +85,7 @@
         </div>
     </div>
 
-    <div class="section-label">04. ——— Revenue History</div>
+    <div class="section-label">04. Revenue History</div>
     <div id="history-container"><p style="font-size:0.9rem;color:#80756b">Loading...</p></div>
 
     <script>
